--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="jumbotron">
-            <div class="jum-bg"><img src="assets/pantai-111.jpg"></div>
+            <div class="jum-bg"><img src="assets/pantai-111.png"></div>
             <div class="search-bar">
                 <input class="search" type="search" placeholder="Pencarian...">
                 <a href="#"><i class="fa-solid fa-magnifying-glass" style="color: black;"></i></a>
